ide plugin build script