@@ -2,836 +2,255 @@
 setlocal EnableDelayedExpansion
 
 :: ========================================================
-:: ModForge IntelliJ Plugin - ULTIMATE Universal Builder
+:: ModForge IntelliJ Plugin - Universal Builder v4.0
 :: ========================================================
 :: This single script handles everything:
-:: - Works in any Windows environment (Cmd/PowerShell)
-:: - Detects & fixes encoding issues
-:: - Finds or downloads Java 21
-:: - Creates Gradle wrapper when needed
-:: - Auto-fixes compilation errors
-:: - Installs to IntelliJ automatically
+:: - Works in any Windows environment
+:: - Configures Java and Gradle appropriately
+:: - Builds the plugin with proper validation settings
+:: - Provides detailed logs and error handling
 :: ========================================================
 
-:: ===================================
-:: CONFIGURATION SECTION
-:: ===================================
-SET "VERSION=3.0.1"
-SET "PLUGIN_VERSION=2.1.0"
-SET "LOG_FILE=ultimate-builder.log"
-SET "MIN_JAVA_VERSION=21"
-SET "JDK_DOWNLOAD_URL=https://download.oracle.com/java/21/latest/jdk-21_windows-x64_bin.exe"
-SET "ADOPTIUM_URL=https://api.adoptium.net/v3/installer/latest/21/ga/windows/x64/jdk/hotspot/normal/eclipse"
-SET "BACKUP_DIR=backup_%DATE:~-4%-%DATE:~4,2%-%DATE:~7,2%_%TIME:~0,2%%TIME:~3,2%%TIME:~6,2%"
-SET "BACKUP_DIR=%BACKUP_DIR: =0%"
-SET "FOUND_JAVA21=0"
-SET "FOUND_GRADLE=0"
-SET "BUILD_SUCCESS=0"
-SET "HAS_POWERSHELL=0"
-SET "IS_ADMIN=0"
-SET "IJ_PLUGIN_PATH=build\distributions\modforge-intellij-plugin-%PLUGIN_VERSION%.zip"
-
-:: Make sure script works in all shells
-chcp 65001 > nul 2>&1
-title ModForge ULTIMATE Builder v%VERSION%
+:: Configuration
+set "VERSION=4.0.0"
+set "PLUGIN_VERSION=2.1.0"
+set "LOG_FILE=ultimate-builder.log"
+set "PLUGIN_PATH=build\distributions\modforge-intellij-plugin-%PLUGIN_VERSION%.zip"
 
 :: Initialize log file
-echo ModForge IntelliJ IDEA Plugin - ULTIMATE Builder v%VERSION% > "%LOG_FILE%"
+echo ModForge IntelliJ IDEA Plugin - Builder v%VERSION% > "%LOG_FILE%"
 echo Started: %DATE% %TIME% >> "%LOG_FILE%"
 echo ======================================================== >> "%LOG_FILE%"
 
-:: ===================================
-:: DISPLAY HEADER
-:: ===================================
-cls
+:: Setup nice display
+if exist "%SystemRoot%\system32\chcp.com" (
+  chcp 65001 > nul 2>&1
+  title ModForge Builder v%VERSION%
+)
+
+:: Display header
 echo.
 echo ========================================================
-echo   ModForge IntelliJ Plugin - ULTIMATE Universal Builder
+echo   ModForge IntelliJ Plugin - Universal Builder
 echo ========================================================
 echo   Version %VERSION% - Building plugin v%PLUGIN_VERSION%
 echo ========================================================
 echo.
 
-:: Log function
-:: Usage: CALL :LOG "Your message here"
-:LOG
-    echo %* >> "%LOG_FILE%"
-    echo %*
-    goto :EOF
+:: Simple logging function that won't break anything
+call :show_log "Builder started"
 
-:: ===================================
-:: CHECK PERMISSIONS & CAPABILITIES
-:: ===================================
-net session >nul 2>&1
-if %errorlevel% == 0 (
-    SET "IS_ADMIN=1"
-    CALL :LOG "Running with administrator privileges."
+:: Check Java setup
+call :show_log "Checking Java installation..."
+
+:: Get Java from JAVA_HOME first
+if defined JAVA_HOME (
+  call :show_log "JAVA_HOME is defined: %JAVA_HOME%"
+  if exist "%JAVA_HOME%\bin\java.exe" (
+    set "JAVA_PATH=%JAVA_HOME%"
+    set "JAVA_BIN=%JAVA_HOME%\bin"
+    call :show_log "Using Java from JAVA_HOME"
+  ) else (
+    call :show_log "Warning: java.exe not found in JAVA_HOME\bin"
+  )
 ) else (
-    SET "IS_ADMIN=0"
-    CALL :LOG "Not running with administrator privileges. Some operations may require elevation."
+  call :show_log "JAVA_HOME not defined"
 )
 
-:: Check for PowerShell support
-powershell -Command "exit" 2>nul
-if %errorlevel% equ 0 (
-    SET "HAS_POWERSHELL=1"
-    CALL :LOG "PowerShell is available."
+:: If Java not found via JAVA_HOME, look in PATH
+if not defined JAVA_PATH (
+  call :show_log "Looking for Java in PATH..."
+  where java.exe >nul 2>&1
+  if not errorlevel 1 (
+    for /f "tokens=*" %%j in ('where java.exe') do (
+      set "JAVA_EXE=%%j"
+      for %%i in ("!JAVA_EXE!") do set "JAVA_BIN=%%~dpi"
+      set "JAVA_BIN=!JAVA_BIN:~0,-1!"
+      for %%i in ("!JAVA_BIN!") do set "JAVA_PATH=%%~dpi"
+      set "JAVA_PATH=!JAVA_PATH:~0,-1!"
+      call :show_log "Found Java at: !JAVA_PATH!"
+    )
+  ) else (
+    call :show_log "Java not found in PATH"
+  )
+)
+
+:: Make sure we have Java
+if not defined JAVA_PATH (
+  call :show_log "ERROR: Java not found. Please install Java 21 or set JAVA_HOME."
+  goto :build_failed
+)
+
+:: Check Java version
+call :show_log "Checking Java version..."
+"%JAVA_BIN%\java.exe" -version 2>&1 | findstr /i "21\." >nul
+if not errorlevel 1 (
+  call :show_log "Confirmed Java 21 is available"
 ) else (
-    SET "HAS_POWERSHELL=0"
-    CALL :LOG "PowerShell is not available. Some features will be limited."
+  call :show_log "Warning: Java version may not be 21. This might cause issues."
 )
 
-:: ===================================
-:: BACKUP PROJECT FILES
-:: ===================================
-CALL :LOG "Creating backup in %BACKUP_DIR%"
+:: Fix paths for Gradle
+set "JAVA_PATH_NORM=%JAVA_PATH:\=/%"
+call :show_log "Using Java path for Gradle: %JAVA_PATH_NORM%"
 
-if not exist "%BACKUP_DIR%" mkdir "%BACKUP_DIR%"
-
-if exist "src" xcopy /E /Y /Q src "%BACKUP_DIR%\src\" > nul
-if exist "build.gradle" copy build.gradle "%BACKUP_DIR%\build.gradle" > nul
-if exist "gradle.properties" copy gradle.properties "%BACKUP_DIR%\gradle.properties" > nul
-
-CALL :LOG "Backup completed"
-
-:: ===================================
-:: JAVA DETECTION
-:: ===================================
-CALL :LOG "Checking for Java installation..."
-
-:: First check if Java is in PATH
-java -version >nul 2>&1
-if %errorlevel% == 0 (
-    for /f "tokens=*" %%v in ('java -version 2^>^&1 ^| findstr /i "version"') do (
-        SET "JAVA_VERSION=%%v"
-        
-        echo !JAVA_VERSION! | findstr /i "21" >nul
-        if !errorlevel! == 0 (
-            CALL :LOG "Found Java 21 in PATH: !JAVA_VERSION!"
-            
-            :: Find proper Java home - looking for a real JDK
-            CALL :FIND_REAL_JAVA_HOME
-            
-            SET "FOUND_JAVA21=1"
-        ) else (
-            CALL :LOG "Found Java in PATH but not version 21: !JAVA_VERSION!"
-            
-            SET /P USER_CHOICE="Would you like to download and install Java 21? (y/n): "
-            if /i "!USER_CHOICE!" == "y" (
-                CALL :DOWNLOAD_JAVA
-            ) else (
-                CALL :LOG "Continuing with existing Java version. This might cause issues."
-                
-                for /f "tokens=*" %%j in ('where java 2^>nul') do (
-                    SET "JAVA_EXE=%%j"
-                    :: Get parent directory
-                    for %%i in ("!JAVA_EXE!") do SET "JAVA_BIN_DIR=%%~dpi"
-                    for %%i in ("!JAVA_BIN_DIR:~0,-1!") do SET "POTENTIAL_JAVA_HOME=%%~dpi"
-                    SET "POTENTIAL_JAVA_HOME=!POTENTIAL_JAVA_HOME:~0,-1!"
-                    
-                    if exist "!JAVA_BIN_DIR!javac.exe" (
-                        SET "JAVA_PATH=!POTENTIAL_JAVA_HOME!"
-                    ) else (
-                        SET "JAVA_PATH=!JAVA_BIN_DIR!.."
-                    )
-                    CALL :LOG "Java path: !JAVA_PATH!"
-                )
-                
-                SET "FOUND_JAVA21=1"
-            )
-        )
-    )
+:: Check for Gradle wrapper
+if exist "gradlew.bat" (
+  call :show_log "Found Gradle wrapper: gradlew.bat"
+  set "GRADLE_CMD=gradlew.bat"
+) else if exist "gradlew" (
+  call :show_log "Found Gradle wrapper: gradlew"
+  set "GRADLE_CMD=gradlew"
 ) else (
-    CALL :LOG "Java not found in PATH."
-    
-    :: Check JAVA_HOME
-    if defined JAVA_HOME (
-        CALL :LOG "JAVA_HOME is set to: %JAVA_HOME%"
-        if exist "%JAVA_HOME%\bin\java.exe" (
-            "%JAVA_HOME%\bin\java.exe" -version >nul 2>&1
-            if !errorlevel! == 0 (
-                CALL :LOG "Found Java via JAVA_HOME"
-                SET "JAVA_PATH=%JAVA_HOME%"
-                
-                "%JAVA_HOME%\bin\java.exe" -version 2>&1 | findstr /i "21" >nul
-                if !errorlevel! == 0 (
-                    CALL :LOG "Found Java 21 in JAVA_HOME"
-                    SET "FOUND_JAVA21=1"
-                ) else (
-                    CALL :LOG "JAVA_HOME points to Java but not version 21"
-                    
-                    SET /P USER_CHOICE="Would you like to download and install Java 21? (y/n): "
-                    if /i "!USER_CHOICE!" == "y" (
-                        CALL :DOWNLOAD_JAVA
-                    ) else (
-                        CALL :LOG "Continuing with existing Java version. This might cause issues."
-                        SET "FOUND_JAVA21=1"
-                    )
-                )
-            )
-        ) else (
-            CALL :LOG "JAVA_HOME is set but java.exe not found at %JAVA_HOME%\bin\java.exe"
-        )
-    )
-    
-    if "!FOUND_JAVA21!" == "0" (
-        :: Comprehensive search
-        CALL :LOG "Performing comprehensive search for Java 21..."
-        CALL :SEARCH_JAVA21_COMPREHENSIVE
-        
-        if "!FOUND_JAVA21!" == "0" (
-            SET /P USER_CHOICE="Java 21 not found. Would you like to download and install it? (y/n): "
-            if /i "!USER_CHOICE!" == "y" (
-                CALL :DOWNLOAD_JAVA
-            ) else (
-                CALL :LOG "Cannot continue without Java 21."
-                pause
-                exit /b 1
-            )
-        )
-    )
+  call :show_log "Gradle wrapper not found, checking for Gradle in PATH..."
+  
+  where gradle >nul 2>&1
+  if not errorlevel 1 (
+    call :show_log "Found Gradle in PATH"
+    set "GRADLE_CMD=gradle"
+  ) else (
+    call :show_log "Gradle not found. Creating minimal Gradle wrapper..."
+    call :create_minimal_wrapper
+  )
 )
 
-:: Ensure we have the normalized path for Gradle
-SET "JAVA_PATH_NORMALIZED=%JAVA_PATH:\=/%"
-CALL :LOG "Using Java path: %JAVA_PATH%"
-CALL :LOG "Normalized Java path: %JAVA_PATH_NORMALIZED%"
+:: Create gradle.properties
+call :show_log "Creating Gradle properties file..."
 
-if "%FOUND_JAVA21%" == "0" (
-    CALL :LOG "Failed to find or install Java 21. Cannot continue."
-    pause
-    exit /b 1
-)
-
-:: ===================================
-:: GRADLE SETUP
-:: ===================================
-CALL :LOG "Checking Gradle installation..."
-
-:: First look for Gradle wrapper
-if exist "gradlew" (
-    CALL :LOG "Found Gradle wrapper (gradlew)"
-    SET "GRADLE_CMD=.\gradlew"
-    SET "FOUND_GRADLE=1"
-) else if exist "gradlew.bat" (
-    CALL :LOG "Found Gradle wrapper (gradlew.bat)"
-    SET "GRADLE_CMD=.\gradlew.bat"
-    SET "FOUND_GRADLE=1"
-) else (
-    :: Check for Gradle in PATH
-    gradle --version >nul 2>&1
-    if !errorlevel! == 0 (
-        for /f "tokens=*" %%g in ('where gradle 2^>nul') do (
-            SET "GRADLE_EXE=%%g"
-            CALL :LOG "Found Gradle in PATH: !GRADLE_EXE!"
-        )
-        SET "GRADLE_CMD=gradle"
-        SET "FOUND_GRADLE=1"
-    ) else (
-        :: Create wrapper
-        CALL :LOG "Gradle not found. Creating Gradle wrapper..."
-        CALL :CREATE_GRADLE_WRAPPER
-    )
-)
-
-if "%FOUND_GRADLE%" == "0" (
-    CALL :LOG "Failed to find or create Gradle. Cannot continue."
-    pause
-    exit /b 1
-)
-
-:: ===================================
-:: GRADLE CONFIGURATION
-:: ===================================
-CALL :LOG "Configuring Gradle for build..."
-
-:: Check if build.gradle exists
-if not exist "build.gradle" (
-    CALL :LOG "build.gradle not found. Cannot continue."
-    pause
-    exit /b 1
-)
-
-:: Create or update gradle.properties
-if exist "gradle.properties" (
-    copy gradle.properties gradle.properties.bak > nul
-    CALL :LOG "Backed up gradle.properties"
-)
-
-:: Create or update gradle.properties with the correct Java path
 (
-    echo # Gradle properties for ModForge - Generated by ULTIMATE Builder
-    echo # %DATE% %TIME%
-    echo.
-    echo # Set Java home for building
-    echo org.gradle.java.home=%JAVA_PATH_NORMALIZED%
-    echo.
-    echo # Disable configuration cache to avoid issues
-    echo org.gradle.configuration-cache=false
-    echo.
-    echo # Increase memory for Gradle tasks
-    echo org.gradle.jvmargs=-Xmx2048m --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-    echo.
-    echo # Enable parallel execution
-    echo org.gradle.parallel=true
-    echo.
-    echo # Optimize Gradle daemon
-    echo org.gradle.daemon=true
-    echo org.gradle.caching=true
+  echo # Generated by ModForge Builder v%VERSION%
+  echo # %DATE% %TIME%
+  echo.
+  echo # Java home for building
+  echo org.gradle.java.home=%JAVA_PATH_NORM%
+  echo.
+  echo # Disable configuration cache to avoid issues
+  echo org.gradle.configuration-cache=false
+  echo.
+  echo # Memory settings
+  echo org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+  echo.
+  echo # Performance settings
+  echo org.gradle.parallel=true
+  echo org.gradle.daemon=true
+  echo org.gradle.caching=true
 ) > gradle.properties
 
-CALL :LOG "Updated gradle.properties with correct Java home path: %JAVA_PATH_NORMALIZED%"
+:: Build the plugin
+call :show_log "Building IntelliJ plugin..."
+set "BUILD_OK=0"
 
-:: ===================================
-:: BUILD PROCESS
-:: ===================================
-CALL :LOG "Checking for and fixing common code issues..."
-
-:: Apply fixes for common issues
-if "%HAS_POWERSHELL%" == "1" (
-    CALL :LOG "Applying automated fixes using PowerShell..."
-    
-    :: Fix common import issues
-    powershell -Command "& { $ErrorActionPreference = 'SilentlyContinue'; $allFiles = Get-ChildItem -Path 'src\main\java' -Filter '*.java' -Recurse; foreach ($file in $allFiles) { $content = Get-Content $file.FullName -Raw; if ($content -match 'Arrays\.' -and -not ($content -match 'import java\.util\.Arrays')) { $content = $content -replace 'package com\.modforge', 'package com.modforge\r\n\r\nimport java.util.Arrays;'; $content | Set-Content $file.FullName -Encoding UTF8 }; if ($content -match 'CompletableFuture' -and -not ($content -match 'import java\.util\.concurrent\.CompletableFuture')) { $content = $content -replace 'package com\.modforge', 'package com.modforge\r\n\r\nimport java.util.concurrent.CompletableFuture;'; $content | Set-Content $file.FullName -Encoding UTF8 }; if ($content -match 'problem\.getDescription\(\)') { $content = $content -replace 'problem\.getDescription\(\)', 'problem.toString()'; $content | Set-Content $file.FullName -Encoding UTF8 }; if ($content -match 'WebSocketClient' -and -not ($content -match 'import org\.java_websocket\.client\.WebSocketClient')) { $content = $content -replace 'package com\.modforge', 'package com.modforge\r\n\r\nimport org.java_websocket.client.WebSocketClient;\r\nimport org.java_websocket.handshake.ServerHandshake;'; $content | Set-Content $file.FullName -Encoding UTF8 }; if ($content -match 'NotificationType' -and -not ($content -match 'import com\.intellij\.notification\.NotificationType')) { $content = $content -replace 'package com\.modforge', 'package com.modforge\r\n\r\nimport com.intellij.notification.NotificationType;'; $content | Set-Content $file.FullName -Encoding UTF8 }; if ($content -match 'Messages\.showInfoDialog\(') { $content = $content -replace 'Messages\.showInfoDialog\((.*?),(.*?),(.*?)\)', 'Messages.showMessageDialog($1,$2,$3, Messages.getInformationIcon())'; $content | Set-Content $file.FullName -Encoding UTF8 }; if ($content -match 'notificationService\.showInfo\(') { $content = $content -replace 'notificationService\.showInfo\((.*?),(.*?)\)', 'notificationService.notify($1,$2,NotificationType.INFORMATION)'; $content | Set-Content $file.FullName -Encoding UTF8 }; if ($content -match 'notificationService\.showError\(') { $content = $content -replace 'notificationService\.showError\((.*?),(.*?)\)', 'notificationService.notify($1,$2,NotificationType.ERROR)'; $content | Set-Content $file.FullName -Encoding UTF8 }; if ($content -match 'AutonomousCodeGenerationService\.getInstance\(project\)') { $content = $content -replace 'AutonomousCodeGenerationService\.getInstance\(project\)', 'project.getService(AutonomousCodeGenerationService.class)'; $content | Set-Content $file.FullName -Encoding UTF8 }; } }"
-    
-    :: Fix PushToGitHubDialog issues
-    powershell -Command "& { $dialogFiles = Get-ChildItem -Path 'src\main\java' -Filter 'PushToGitHubDialog.java' -Recurse; foreach ($file in $dialogFiles) { $content = Get-Content $file.FullName -Raw; if ($content -match 'public String getOwner\(\)') { $content = $content -replace 'public String getOwner\(\)', 'public String getRepositoryOwner()'; $content = $content -replace 'getOwner\(\)', 'getRepositoryOwner()'; $content | Set-Content $file.FullName -Encoding UTF8 } } }"
-    
-    :: Update plugin.xml compatibility
-    if exist "src\main\resources\META-INF\plugin.xml" (
-        powershell -Command "& { $content = Get-Content 'src\main\resources\META-INF\plugin.xml' -Raw; if ($content -match 'idea-version since-build') { $content = $content -replace '(since-build=.+? until-build=.)([^\"]+)(.)', '$1251.*$3'; $content | Set-Content 'src\main\resources\META-INF\plugin.xml' -Encoding UTF8; } }"
-        CALL :LOG "Updated plugin.xml compatibility version"
-    )
-) else (
-    CALL :LOG "PowerShell not available for automated fixes. Proceeding without code fixes."
-)
-
-:: ===================================
-:: BUILD THE PLUGIN
-:: ===================================
-CALL :LOG "Building ModForge IntelliJ plugin..."
-
-:: Run the build
-CALL :LOG "Running Gradle build..."
-%GRADLE_CMD% clean build > build.log 2>&1
+:: First build attempt
+call :show_log "Running first build attempt..."
+call %GRADLE_CMD% clean build > build.log 2>&1
 
 :: Check if build succeeded
-if exist "%IJ_PLUGIN_PATH%" (
-    CALL :LOG "Plugin built successfully!"
-    SET "BUILD_SUCCESS=1"
+if exist "%PLUGIN_PATH%" (
+  call :show_log "Build successful on first attempt!"
+  set "BUILD_OK=1"
 ) else (
-    :: Try with validation disabled
-    CALL :LOG "Build failed, trying with validation disabled..."
+  call :show_log "First build attempt failed. Trying with validation disabled..."
+  
+  :: Backup build.gradle if exists
+  if exist "build.gradle" (
+    copy build.gradle build.gradle.bak >nul
     
-    :: Create a temporary copy of build.gradle
-    if exist "build.gradle" (
-        copy build.gradle build.gradle.bak > nul
-        
-        :: Disable validation in build.gradle
-        if "%HAS_POWERSHELL%" == "1" (
-            :: Using PowerShell for more precise replacement
-            powershell -Command "(Get-Content build.gradle) -replace 'tasks.buildPlugin.dependsOn\(validatePluginForProduction\)', '// tasks.buildPlugin.dependsOn(validatePluginForProduction) // Disabled by ULTIMATE Builder' | Set-Content build.gradle"
-        ) else (
-            :: Fallback method without PowerShell - simple replacement
-            type build.gradle | findstr /v "validatePluginForProduction" > build.gradle.tmp
-            move /y build.gradle.tmp build.gradle > nul
-        )
-        
-        :: Run the build again
-        CALL :LOG "Running Gradle build with validation disabled..."
-        %GRADLE_CMD% clean build > build_simple.log 2>&1
-        
-        :: Restore the original build.gradle
-        move /y build.gradle.bak build.gradle > nul
-        
-        if exist "%IJ_PLUGIN_PATH%" (
-            CALL :LOG "Plugin built successfully with validation disabled!"
-            SET "BUILD_SUCCESS=1"
-        ) else (
-            :: Check for specific errors in the build log
-            CALL :LOG "Build still failed. Here are the most recent errors:"
-            findstr /i /c:"error: " build_simple.log
-            CALL :LOG "See build_simple.log for more details."
-            CALL :LOG "Build failed. Cannot continue."
-            pause
-            exit /b 1
-        )
+    :: Create a temporary file without validation
+    findstr /v /c:"validatePluginForProduction" build.gradle > build.gradle.tmp
+    move /y build.gradle.tmp build.gradle >nul
+    
+    :: Try build again
+    call :show_log "Running second build attempt with validation disabled..."
+    call %GRADLE_CMD% clean build > build_simple.log 2>&1
+    
+    :: Restore original build.gradle
+    move /y build.gradle.bak build.gradle >nul
+    
+    :: Check if this build succeeded
+    if exist "%PLUGIN_PATH%" (
+      call :show_log "Build successful with validation disabled!"
+      set "BUILD_OK=1"
     ) else (
-        CALL :LOG "build.gradle not found. Cannot continue."
-        pause
-        exit /b 1
+      call :show_log "Build failed even with validation disabled."
     )
+  ) else (
+    call :show_log "Error: build.gradle not found."
+  )
 )
 
-if "%BUILD_SUCCESS%" == "0" (
-    CALL :LOG "Build failed. Try running with validation disabled."
-    pause
-    exit /b 1
-)
-
-:: ===================================
-:: PLUGIN INSTALLATION
-:: ===================================
-CALL :LOG "Plugin file created at: %CD%\%IJ_PLUGIN_PATH%"
-
-SET /P INSTALL_CHOICE="Would you like to install the plugin to IntelliJ IDEA? (y/n): "
-if /i not "%INSTALL_CHOICE%" == "y" (
-    CALL :LOG "User declined plugin installation."
-    CALL :LOG "Plugin file is available at: %CD%\%IJ_PLUGIN_PATH%"
-    CALL :LOG "You can install it manually via Settings → Plugins → ⚙ → Install Plugin from Disk..."
-    goto :COMPLETION
-)
-
-:: Find IntelliJ installations
-CALL :LOG "Searching for IntelliJ IDEA installations..."
-SET "FOUND_INTELLIJ=0"
-SET "INTELLIJ_PATHS="
-
-:: Check common IntelliJ installation paths
-SET "SEARCH_PATHS=%PROGRAMFILES%\JetBrains %PROGRAMFILES(X86)%\JetBrains %LOCALAPPDATA%\JetBrains"
-
-for %%p in (%SEARCH_PATHS%) do (
-    if exist "%%p" (
-        for /d %%d in ("%%p\IntelliJ*") do (
-            if exist "%%d\bin\idea64.exe" (
-                CALL :LOG "Found IntelliJ IDEA: %%d"
-                SET "INTELLIJ_PATHS=!INTELLIJ_PATHS! %%d"
-                SET "FOUND_INTELLIJ=1"
-            )
-        )
-    )
-)
-
-:: Check JetBrains Toolbox locations
-if exist "%LOCALAPPDATA%\JetBrains\Toolbox" (
-    for /d %%d in ("%LOCALAPPDATA%\JetBrains\Toolbox\apps\IDEA-C\ch-*" "%LOCALAPPDATA%\JetBrains\Toolbox\apps\IDEA-U\ch-*") do (
-        if exist "%%d\bin\idea64.exe" (
-            CALL :LOG "Found IntelliJ IDEA (Toolbox): %%d"
-            SET "INTELLIJ_PATHS=!INTELLIJ_PATHS! %%d"
-            SET "FOUND_INTELLIJ=1"
-        )
-    )
-)
-
-:: Verify we found IntelliJ
-if not defined INTELLIJ_PATHS (
-    CALL :LOG "No IntelliJ IDEA installations found."
-    CALL :LOG "Plugin file is available at: %CD%\%IJ_PLUGIN_PATH%"
-    CALL :LOG "You can install it manually via Settings → Plugins → ⚙ → Install Plugin from Disk..."
-    goto :COMPLETION
-)
-
-:: Parse IntelliJ paths and let user select
-echo Found IntelliJ IDEA installations:
-SET "IDX=0"
-for %%p in (%INTELLIJ_PATHS%) do (
-    if not "%%p" == "" (
-        SET /a "IDX+=1"
-        SET "IJ_PATH_!IDX!=%%p"
-        echo !IDX!^) %%p
-    )
-)
-
-if %IDX% gtr 1 (
-    SET /p "IJ_CHOICE=Select IntelliJ IDEA installation (1-%IDX%): "
+:: Check final build result
+if "%BUILD_OK%" == "1" (
+  goto :build_succeeded
 ) else (
-    SET "IJ_CHOICE=1"
-)
-
-SET "INTELLIJ_PATH=!IJ_PATH_%IJ_CHOICE%!"
-
-:: Find plugins directory
-SET "PLUGINS_DIR=%INTELLIJ_PATH%\plugins"
-if not exist "!PLUGINS_DIR!" (
-    SET "PLUGINS_DIR=%INTELLIJ_PATH%\config\plugins"
-)
-
-if not exist "!PLUGINS_DIR!" (
-    CALL :LOG "Cannot find plugins directory."
-    CALL :LOG "Plugin file is available at: %CD%\%IJ_PLUGIN_PATH%"
-    CALL :LOG "You can install it manually via Settings → Plugins → ⚙ → Install Plugin from Disk..."
-    goto :COMPLETION
-)
-
-:: Check if IntelliJ is running
-tasklist /fi "imagename eq idea64.exe" | find "idea64.exe" > nul
-if not !errorlevel! == 1 (
-    CALL :LOG "IntelliJ IDEA is currently running."
-    CALL :LOG "Please close all instances before continuing."
-    
-    SET /P CLOSE_IDEA="Have you closed all IntelliJ IDEA instances? (y/n): "
-    if /i not "!CLOSE_IDEA!" == "y" (
-        CALL :LOG "Installation aborted."
-        CALL :LOG "Plugin file is available at: %CD%\%IJ_PLUGIN_PATH%"
-        goto :COMPLETION
-    )
-)
-
-:: Install the plugin
-CALL :LOG "Installing plugin to !PLUGINS_DIR!..."
-
-:: Extract and install the plugin
-SET "PLUGIN_NAME=modforge-intellij-plugin"
-SET "TEMP_DIR=%TEMP%\modforge_plugin_install"
-
-:: Clean up any previous temp dir
-if exist "!TEMP_DIR!" rd /s /q "!TEMP_DIR!" > nul
-
-:: Create temp dir for extraction
-mkdir "!TEMP_DIR!" > nul
-
-:: Extract the plugin
-if "%HAS_POWERSHELL%" == "1" (
-    powershell -Command "& { Add-Type -AssemblyName System.IO.Compression.FileSystem; [System.IO.Compression.ZipFile]::ExtractToDirectory('%CD%\%IJ_PLUGIN_PATH%', '%TEMP_DIR%') }"
-) else (
-    CALL :LOG "PowerShell not available for extraction. Using alternative method..."
-    :: Use built-in expand command as fallback
-    expand -r "%IJ_PLUGIN_PATH%" "!TEMP_DIR!" > nul
-)
-
-:: Check if extraction worked
-if not exist "!TEMP_DIR!\%PLUGIN_NAME%" (
-    CALL :LOG "Plugin extraction failed. Cannot install."
-    CALL :LOG "Plugin file is available at: %CD%\%IJ_PLUGIN_PATH%"
-    CALL :LOG "You can install it manually via Settings → Plugins → ⚙ → Install Plugin from Disk..."
-    goto :COMPLETION
-)
-
-:: Remove existing plugin if present
-if exist "!PLUGINS_DIR!\%PLUGIN_NAME%" rd /s /q "!PLUGINS_DIR!\%PLUGIN_NAME%" > nul
-
-:: Copy the plugin to the plugins directory
-xcopy /e /i /y "!TEMP_DIR!\%PLUGIN_NAME%" "!PLUGINS_DIR!\%PLUGIN_NAME%" > nul
-
-:: Clean up
-rd /s /q "!TEMP_DIR!" > nul
-
-if exist "!PLUGINS_DIR!\%PLUGIN_NAME!" (
-    CALL :LOG "Plugin installed successfully!"
-    CALL :LOG "Please restart IntelliJ IDEA to use the new plugin."
-) else (
-    CALL :LOG "Plugin installation failed."
-    CALL :LOG "Plugin file is available at: %CD%\%IJ_PLUGIN_PATH%"
-    CALL :LOG "You can install it manually via Settings → Plugins → ⚙ → Install Plugin from Disk..."
+  goto :build_failed
 )
 
 :: ===================================
-:: COMPLETION
+:: BUILD RESULT HANDLERS
 :: ===================================
-:COMPLETION
+
+:build_succeeded
 echo.
 echo ========================================================
-echo  ModForge Plugin Build Complete!
+echo   BUILD SUCCESSFUL
 echo ========================================================
 echo.
-CALL :LOG "Thank you for using ModForge ULTIMATE Builder!"
-CALL :LOG "Log file available at: %LOG_FILE%"
+call :show_log "Plugin file created: %CD%\%PLUGIN_PATH%"
+echo Plugin file created:
+echo %CD%\%PLUGIN_PATH%
+echo.
+echo You can install it manually via:
+echo Settings → Plugins → ⚙ → Install Plugin from Disk...
+echo.
+goto :end
 
+:build_failed
+echo.
+echo ========================================================
+echo   BUILD FAILED
+echo ========================================================
+echo.
+call :show_log "Build process failed."
+echo Please check the log files for details:
+echo - %LOG_FILE%
+echo - build.log
+echo - build_simple.log
+echo.
+goto :end
+
+:end
+call :show_log "Build process completed."
+echo Log file: %LOG_FILE%
 pause
-exit /b 0
+exit /b
 
 :: ===================================
-:: SUPPORTING FUNCTIONS
+:: UTILITY FUNCTIONS
 :: ===================================
-:FIND_REAL_JAVA_HOME
-    CALL :LOG "Finding proper Java home directory..."
-    
-    :: First try the java.exe path
-    for /f "tokens=*" %%j in ('where java 2^>nul') do (
-        SET "JAVA_EXE=%%j"
-        :: Get parent directory
-        for %%i in ("!JAVA_EXE!") do SET "JAVA_BIN_DIR=%%~dpi"
-        for %%i in ("!JAVA_BIN_DIR:~0,-1!") do SET "POTENTIAL_JAVA_HOME=%%~dpi"
-        SET "POTENTIAL_JAVA_HOME=!POTENTIAL_JAVA_HOME:~0,-1!"
-        
-        CALL :LOG "Checking potential Java home: !POTENTIAL_JAVA_HOME!"
-        
-        :: Check if this is a valid JDK (has javac.exe)
-        if exist "!JAVA_BIN_DIR!javac.exe" (
-            SET "JAVA_PATH=!POTENTIAL_JAVA_HOME!"
-            SET "JAVA_PATH_NORMALIZED=!JAVA_PATH:\=/!"
-            CALL :LOG "Found valid JDK at: !JAVA_PATH!"
-            goto :EOF
-        ) else (
-            CALL :LOG "Not a JDK (missing javac.exe), looking deeper..."
-        )
-    )
-    
-    :: If we're here, we didn't find a JDK based on java.exe location
-    :: Search for standard JDK locations
-    SET "JDK_SEARCH_PATHS=^
-    C:\Program Files\Java\jdk*^
-    C:\Program Files\Eclipse Adoptium\jdk*^
-    %LOCALAPPDATA%\Programs\Eclipse Adoptium\jdk*^
-    %USERPROFILE%\.jdks\jdk*"
-    
-    for %%p in (!JDK_SEARCH_PATHS!) do (
-        for /d %%j in (%%p) do (
-            if exist "%%j\bin\javac.exe" (
-                "%%j\bin\java.exe" -version 2>&1 | findstr /i "21" >nul
-                if !errorlevel! == 0 (
-                    SET "JAVA_PATH=%%j"
-                    SET "JAVA_PATH_NORMALIZED=!JAVA_PATH:\=/!"
-                    CALL :LOG "Found JDK 21: !JAVA_PATH!"
-                    goto :EOF
-                )
-            )
-        )
-    )
-    
-    :: If we've reached here and still haven't found a JDK, use JAVA_HOME
-    if defined JAVA_HOME (
-        if exist "%JAVA_HOME%\bin\javac.exe" (
-            "%JAVA_HOME%\bin\java.exe" -version 2>&1 | findstr /i "21" >nul
-            if !errorlevel! == 0 (
-                SET "JAVA_PATH=%JAVA_HOME%"
-                SET "JAVA_PATH_NORMALIZED=!JAVA_PATH:\=/!"
-                CALL :LOG "Using JAVA_HOME as JDK: !JAVA_PATH!"
-                goto :EOF
-            )
-        )
-    )
-    
-    :: Last resort: use a simple path - most likely it's just a JRE
-    for /f "tokens=*" %%j in ('where java 2^>nul') do (
-        SET "JAVA_EXE=%%j"
-        for %%i in ("!JAVA_EXE!") do SET "JAVA_BIN_DIR=%%~dpi"
-        SET "JAVA_PATH=!JAVA_BIN_DIR!.."
-        SET "JAVA_PATH_NORMALIZED=!JAVA_PATH:\=/!"
-        CALL :LOG "Using JRE path as fallback: !JAVA_PATH!"
-        goto :EOF
-    )
-    
-    :: If we got here, we couldn't find any usable Java
-    CALL :LOG "Failed to locate a usable Java installation."
-    goto :EOF
 
-:SEARCH_JAVA21_COMPREHENSIVE
-    CALL :LOG "Running comprehensive Java 21 search..."
-    
-    :: Common installation paths
-    SET "JAVA_PATHS=^
-    C:\Program Files\Java^
-    C:\Program Files (x86)\Java^
-    C:\Java^
-    %LOCALAPPDATA%\Programs\Eclipse Adoptium^
-    %USERPROFILE%\.jdks"
-    
-    :: Check common paths
-    for %%p in (!JAVA_PATHS!) do (
-        if exist "%%p" (
-            for /d %%j in ("%%p\*") do (
-                if exist "%%j\bin\java.exe" (
-                    "%%j\bin\java.exe" -version 2>&1 | findstr /i "21" >nul
-                    if !errorlevel! == 0 (
-                        CALL :LOG "Found Java 21: %%j"
-                        SET "JAVA_PATH=%%j"
-                        SET "JAVA_PATH_NORMALIZED=%%j"
-                        SET "JAVA_PATH_NORMALIZED=!JAVA_PATH_NORMALIZED:\=/!"
-                        SET "FOUND_JAVA21=1"
-                        goto :EOF
-                    )
-                )
-            )
-        )
-    )
-    
-    :: Check JetBrains bundled JDKs
-    SET "JB_PATHS=^
-    %LOCALAPPDATA%\JetBrains\Toolbox\apps\IDEA-C^
-    %LOCALAPPDATA%\JetBrains\Toolbox\apps\IDEA-U^
-    %LOCALAPPDATA%\JetBrains\Toolbox\apps\AndroidStudio^
-    %LOCALAPPDATA%\JetBrains\IntelliJIdea*^
-    %PROGRAMFILES%\JetBrains\IntelliJ*"
-    
-    for %%p in (!JB_PATHS!) do (
-        if exist "%%p" (
-            :: Find jbr directories
-            for /f "tokens=*" %%j in ('dir /b /s "%%p\jbr" 2^>nul') do (
-                if exist "%%j\bin\java.exe" (
-                    "%%j\bin\java.exe" -version 2>&1 | findstr /i "21" >nul
-                    if !errorlevel! == 0 (
-                        CALL :LOG "Found JetBrains Bundled Java 21: %%j"
-                        SET "JAVA_PATH=%%j"
-                        SET "JAVA_PATH_NORMALIZED=%%j"
-                        SET "JAVA_PATH_NORMALIZED=!JAVA_PATH_NORMALIZED:\=/!"
-                        SET "FOUND_JAVA21=1"
-                        goto :EOF
-                    )
-                )
-            )
-        )
-    )
-    
-    :: Check .jdks directory specifically
-    if exist "%USERPROFILE%\.jdks" (
-        for /d %%j in ("%USERPROFILE%\.jdks\*") do (
-            if exist "%%j\bin\java.exe" (
-                echo "%%j" | findstr /i "21 jbr-21" >nul
-                if !errorlevel! == 0 (
-                    "%%j\bin\java.exe" -version 2>&1 | findstr /i "21" >nul
-                    if !errorlevel! == 0 (
-                        CALL :LOG "Found Java 21 in .jdks: %%j"
-                        SET "JAVA_PATH=%%j"
-                        SET "JAVA_PATH_NORMALIZED=%%j"
-                        SET "JAVA_PATH_NORMALIZED=!JAVA_PATH_NORMALIZED:\=/!"
-                        SET "FOUND_JAVA21=1"
-                        goto :EOF
-                    )
-                )
-            )
-        )
-    )
-    
-    goto :EOF
+:show_log
+  echo %* >> "%LOG_FILE%"
+  echo %*
+  goto :EOF
 
-:DOWNLOAD_JAVA
-    CALL :LOG "Preparing to download Java 21..."
-    
-    :: Choose JDK type
-    echo Which Java 21 distribution would you prefer?
-    echo 1) Oracle JDK 21 (official Oracle build)
-    echo 2) Eclipse Temurin 21 (community build, recommended)
-    SET /p JAVA_CHOICE="Enter choice (1/2): "
-    
-    if "%JAVA_CHOICE%" == "1" (
-        SET "DOWNLOAD_URL=%JDK_DOWNLOAD_URL%"
-        SET "INSTALLER_NAME=jdk21_installer.exe"
-        SET "JAVA_VENDOR=Oracle"
-    ) else (
-        SET "DOWNLOAD_URL=%ADOPTIUM_URL%"
-        SET "INSTALLER_NAME=temurin21_installer.exe"
-        SET "JAVA_VENDOR=Temurin"
-    )
-    
-    :: Download the installer
-    CALL :LOG "Downloading %JAVA_VENDOR% JDK 21 installer..."
-    echo This may take a few minutes depending on your internet connection.
-    
-    if "%HAS_POWERSHELL%" == "1" (
-        powershell -Command "& {[Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12; Invoke-WebRequest -Uri '%DOWNLOAD_URL%' -OutFile '%INSTALLER_NAME%'; if ($?) { Write-Host 'Download completed successfully' } else { Write-Host 'Download failed' }}"
-    ) else (
-        CALL :LOG "Attempting to download using bitsadmin..."
-        bitsadmin /transfer "Java21Download" "%DOWNLOAD_URL%" "%CD%\%INSTALLER_NAME%" >nul
-    )
-    
-    if not exist "%INSTALLER_NAME%" (
-        CALL :LOG "Failed to download Java 21 installer."
-        goto :EOF
-    )
-    
-    :: Install Java 21
-    CALL :LOG "Installing Java 21 (%JAVA_VENDOR% JDK)..."
-    
-    :: Check if admin rights are needed
-    if "%IS_ADMIN%" == "0" (
-        CALL :LOG "Administrator privileges are required to install Java."
-        CALL :LOG "Please accept the UAC prompt that will appear."
-        
-        :: Run installer with elevation
-        powershell -Command "Start-Process -FilePath '%INSTALLER_NAME%' -ArgumentList '/s' -Verb RunAs -Wait" 2>nul
-    ) else (
-        :: Run the installer directly
-        start /wait "" "%INSTALLER_NAME%" /s
-    )
-    
-    :: Clean up installer
-    if exist "%INSTALLER_NAME%" del "%INSTALLER_NAME%"
-    
-    :: Verify installation
-    CALL :LOG "Verifying Java 21 installation..."
-    
-    :: Reset the previously found flag
-    SET "FOUND_JAVA21=0"
-    
-    :: Expected installation paths
-    if "%JAVA_VENDOR%" == "Oracle" (
-        SET "EXPECTED_PATH=C:\Program Files\Java\jdk-21"
-    ) else (
-        SET "EXPECTED_PATH=C:\Program Files\Eclipse Adoptium\jdk-21"
-    )
-    
-    if exist "%EXPECTED_PATH%\bin\java.exe" (
-        "%EXPECTED_PATH%\bin\java.exe" -version 2>&1 | findstr /i "21" >nul
-        if !errorlevel! == 0 (
-            CALL :LOG "Confirmed Java 21 installation at %EXPECTED_PATH%"
-            SET "JAVA_PATH=%EXPECTED_PATH%"
-            SET "JAVA_PATH_NORMALIZED=%EXPECTED_PATH:\=/%"
-            SET "FOUND_JAVA21=1"
-        )
-    )
-    
-    :: If we still can't find it, search again
-    if "%FOUND_JAVA21%" == "0" (
-        CALL :LOG "Java 21 installation location not found at expected path."
-        CALL :LOG "Searching for the newly installed Java 21..."
-        CALL :SEARCH_JAVA21_COMPREHENSIVE
-    )
-    
-    if "%FOUND_JAVA21%" == "1" (
-        CALL :LOG "Java 21 installation successful: %JAVA_PATH%"
-        
-        :: Make sure we have the normalized path
-        SET "JAVA_PATH_NORMALIZED=%JAVA_PATH:\=/%"
-        CALL :LOG "Normalized Java path: %JAVA_PATH_NORMALIZED%"
-        
-        :: Ask if user wants to set JAVA_HOME
-        SET /P USER_CHOICE="Would you like to set JAVA_HOME to point to the installed Java 21? (y/n): "
-        if /i "!USER_CHOICE!" == "y" (
-            if "%IS_ADMIN%" == "1" (
-                setx JAVA_HOME "%JAVA_PATH%" /M >nul
-                CALL :LOG "Set JAVA_HOME to %JAVA_PATH% system-wide."
-            ) else (
-                setx JAVA_HOME "%JAVA_PATH%" >nul
-                CALL :LOG "Set JAVA_HOME to %JAVA_PATH% for current user."
-            )
-        )
-        
-        :: Set for current session
-        SET "JAVA_HOME=%JAVA_PATH%"
-        SET "PATH=%JAVA_PATH%\bin;%PATH%"
-        CALL :LOG "Environment configured for Java 21 in this session."
-    ) else (
-        CALL :LOG "Java 21 installation verification failed."
-    )
-    
-    goto :EOF
-
-:CREATE_GRADLE_WRAPPER
-    CALL :LOG "Creating basic Gradle wrapper files..."
-    
-    :: Create gradlew.bat for Windows
-    (
-        echo @echo off
-        echo.
-        echo rem Gradle wrapper script for Windows
-        echo rem Auto-generated by ModForge ULTIMATE Builder
-        echo.
-        echo if not exist "%%~dp0\gradle\wrapper\gradle-wrapper.jar" (
-        echo     echo Creating Gradle wrapper directory structure...
-        echo     if not exist "%%~dp0\gradle\wrapper" mkdir "%%~dp0\gradle\wrapper"
-        echo )
-        echo.
-        echo rem Check if Gradle is in PATH
-        echo gradle --version 2^>nul ^>nul
-        echo if %%errorlevel%% == 0 (
-        echo     echo Using Gradle from PATH
-        echo     gradle %%*
-        echo ) else (
-        echo     echo Gradle not found in PATH. Attempting to download...
-        echo     powershell -Command "& {[Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12; Invoke-WebRequest -Uri 'https://services.gradle.org/distributions/gradle-8.5-bin.zip' -OutFile 'gradle-8.5-bin.zip'}"
-        echo     echo Extracting Gradle...
-        echo     powershell -Command "& {Expand-Archive -Path 'gradle-8.5-bin.zip' -DestinationPath 'gradle-temp' -Force}"
-        echo     echo Running extracted Gradle...
-        echo     call gradle-temp\gradle-8.5\bin\gradle.bat %%*
-        echo     echo Cleaning up...
-        echo     rmdir /S /Q gradle-temp
-        echo     del gradle-8.5-bin.zip
-        echo )
-    ) > gradlew.bat
-    
-    CALL :LOG "Created gradlew.bat"
-    SET "GRADLE_CMD=.\gradlew.bat"
-    SET "FOUND_GRADLE=1"
-    
-    goto :EOF
+:create_minimal_wrapper
+  call :show_log "Creating minimal Gradle wrapper..."
+  
+  (
+    echo @echo off
+    echo echo Running Gradle build with auto-download...
+    echo.
+    echo :: Try to use system Gradle first
+    echo call gradle %%* 2^>nul
+    echo if %%errorlevel%% == 0 exit /b 0
+    echo.
+    echo echo System Gradle not available. Using simplified wrapper...
+    echo if not exist gradle-wrapper mkdir gradle-wrapper
+    echo.
+    echo :: Use Java to run simple Gradle build
+    echo "%JAVA_BIN%\java" -Dorg.gradle.appname=gradlew -jar gradle-wrapper\gradle-wrapper.jar %%*
+  ) > gradlew.bat
+  
+  call :show_log "Created minimal gradlew.bat"
+  set "GRADLE_CMD=gradlew.bat"
+  goto :EOF
